--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>lerpypluh </title> — Lerpy Terminal</title>
+<title>lerpypluh </title> 
 <style>
   :root{
     --bg:#0b0b0b;
